testsuite/tests/parser/should_fail/OpaqueParseFail3.hs
module OpaqueParseFail2 where

f = id
{-# OPAQUE CONLIKE f #-}
