testsuite/tests/parser/should_fail/OpaqueParseFail3.stderr

OpaqueParseFail3.hs:4:12: error: [GHC-58481]
    Parse error on input ‘CONLIKE’.
    Expected one of 'as', 'hiding', 'qualified', 'export', 'label',
                    'dynamic', 'safe', 'interruptible', 'unsafe', 'family', ...
